# go-server/docs/swagger.json
@@ -1232,13 +1232,19 @@
                 "operationId": "getFlaggedReviews",
                 "parameters": [
                     {
-                        "description": "getFlaggedRequest request",
-                        "name": "getGameReviews",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/reviews.GetFlaggedReviewsRequest"
-                        }
+                        "type": "string",
+                        "name": "gameId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "offset",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1290,13 +1296,29 @@
                 "operationId": "getReviewsForGame",
                 "parameters": [
                     {
-                        "description": "getGameReviews request",
-                        "name": "getGameReviews",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/reviews.GetReviewsForGame"
-                        }
+                        "type": "string",
+                        "name": "gameId",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 0,
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "minimum": 0,
+                        "type": "integer",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "userId",
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -2014,7 +2036,7 @@
                     "type": "string"
                 },
                 "releaseDate": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "summary": {
                     "type": "string"
@@ -2106,7 +2128,7 @@
                     "$ref": "#/definitions/games.RatingStats"
                 },
                 "releaseDate": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "summary": {
                     "type": "string"
@@ -2229,7 +2251,7 @@
                     "type": "string"
                 },
                 "releaseDate": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "summary": {
                     "type": "string"
@@ -2284,20 +2306,6 @@
             "properties": {
                 "reviewId": {
                     "type": "string"
-                }
-            }
-        },
-        "reviews.GetFlaggedReviewsRequest": {
-            "type": "object",
-            "properties": {
-                "gameId": {
-                    "type": "string"
-                },
-                "limit": {
-                    "type": "integer"
-                },
-                "offset": {
-                    "type": "integer"
                 }
             }
         },
